--- a/2-welcome/index.html
+++ b/2-welcome/index.html
@@ -144,6 +144,11 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
         padding-right: 15px !important;
       }
 
+      .mobile-content-p016 {
+        padding-right: 16px !important;
+        padding-left: 16px !important;
+      }
+
       .mobile-content-p0n {
          width: 100% !important;
          padding-right: 30px  !important;
@@ -334,7 +339,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                         <table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
                           <tr>
                             <td align="center" style="padding:0;Margin:0;font-size:0px; padding-right: 32px;">
-                               <img class="adaptive-img" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module3-task1/2-welcome/img/CroodsStanding.png" alt="CroodsStanding" width="175" height="269" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /> 
+                               <img class="adaptive-img" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/2-welcome/img/CroodsStanding.png" alt="CroodsStanding" width="175" height="269" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /> 
                             </td>
                           </tr>
                         </table>
@@ -427,7 +432,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                               <tbody>
                               <tr>
                                 <td align="center" style="padding:0;Margin:0;font-size:0px; width:100%;">
-                                  <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/master/2-welcome/img/portrait2.png" alt="Антон Громов" width="88" height="88" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
+                                  <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/2-welcome/img/portrait2.png" alt="Антон Громов" width="88" height="88" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
                                 </td>
                               </tr>
                               <tr>
@@ -452,7 +457,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                               <tbody>
                               <tr>
                                 <td align="center" style="padding:0;Margin:0;font-size:0px; width:100%;">
-                                  <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/master/2-welcome/img/portrait3.png" alt="Илья Раменский" width="88" height="88" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
+                                  <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/2-welcome/img/portrait3.png" alt="Илья Раменский" width="88" height="88" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
                                 </td>
                               </tr>
                               <tr>
@@ -477,7 +482,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                               <tbody>
                               <tr>
                                 <td align="center" style="padding:0;Margin:0;font-size:0px; width:100%;">
-                                  <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/master/2-welcome/img/portrait4.png" alt="Игнатий Чубаров" width="88" height="88" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
+                                  <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/2-welcome/img/portrait4.png" alt="Игнатий Чубаров" width="88" height="88" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
                                 </td>
                               </tr>
                               <tr>
@@ -533,22 +538,22 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                           <!-- Блок с первым мероприятием контейнер -->
                           <table cellpadding="0" cellspacing="0" border="0" width="600"
                             align="center" 
-                            style="padding-top: 0px; padding-bottom: 0px; padding-right: 16px; padding-left: 16px;">
+                            style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
                             <tr>
-                              <td style="padding-top: 24px; padding-bottom: 0px;">
+                              <td class="mobile-content-p016" style="padding-top: 24px; padding-bottom: 0px;padding-right: 0px; padding-left: 0px; ">
                                 <table cellpadding="0" cellspacing="0" border="0"
                                   width="560" align="center" 
                                   style="padding-top: 0px; padding-bottom: 0px;">
                                   <!-- мероприятие -->
                                   <tr>
-                                    <td style="padding-bottom: 0px;">
+                                    <td style="padding-bottom: 0px; ">
                                       <table cellpadding="0" cellspacing="0"
                                         border="0" width="560" align="center"
                                         style="padding-top: 0px; padding-bottom: 0px;">
                                         <tr>
                                           <td align="center" bgcolor="#ffffff"
                                             width="560"
-                                            style="padding-top: 20px; padding-bottom: 0px; border-radius: 15px; padding-right: 16px; border: 1px solid #02BAD3">
+                                            style="padding-top: 20px; padding-bottom: 0px; border-radius: 15px;  padding-right: 16px; border: 1px solid #02BAD3">
                                             <table cellpadding="0"
                                               cellspacing="0" border="0"
                                               width="560" align="center"
@@ -604,9 +609,9 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                           <!-- Блок со вторым мероприятием контейнер-->
                           <table cellpadding="0" cellspacing="0" border="0" width="600"
                             align="center" 
-                            style="padding-top: 0px; padding-bottom: 0px; padding-right: 16px; padding-left: 16px;">
+                            style="padding-top: 0px; padding-bottom: 0px; ">
                             <tr>
-                              <td style="padding-top: 0px; padding-bottom: 0px;">
+                              <td class="mobile-content-p016" style="padding-top: 0px; padding-bottom: 0px;">
                                 <table cellpadding="0" cellspacing="0" border="0"
                                   width="560" align="center" 
                                   style="padding-top: 0px; padding-bottom: 0px; ">
@@ -676,9 +681,9 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                           <!-- Блок с третьим мероприятием-->
                           <table cellpadding="0" cellspacing="0" border="0" width="600"
                             align="center" 
-                            style="padding-top: 0px; padding-bottom: 0px; padding-right: 16px; padding-left: 16px;">
+                            style="padding-top: 0px; padding-bottom: 0px; ">
                             <tr>
-                              <td style="padding-top: 0px; padding-bottom: 0px;">
+                              <td class="mobile-content-p016" style="padding-top: 0px; padding-bottom: 0px;">
                                 <table cellpadding="0" cellspacing="0" border="0" 
                                   width="560" align="center"
                                   style="padding-top: 0px; padding-bottom: 0px;  ">
@@ -760,7 +765,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
                              <tr>
                                 <td width="273.4px" align="center" valign="top"
                                    style="padding-top: 0px; padding-bottom: 0px; padding-right: 0px; ">
-                                  <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module3-task1/2-welcome/img/CroodsKeepinginTouch.png" alt="CroodsKeepinginTouch" width="273.4px" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
+                                  <img src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/2-welcome/img/CroodsKeepinginTouch.png" alt="CroodsKeepinginTouch" width="273.4px" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
                                </td>
                              </tr>
                          </table>
@@ -804,15 +809,15 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD
 
                                     style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;">
                                           <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img
-                                            title="Facebook" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/1-invitation/img/facebook.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
+                                            title="Facebook" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/2-welcome/img/facebook.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
                                           </td>
-                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Instagram" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/1-invitation/img/inst.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
+                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Instagram" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/2-welcome/img/inst.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
                                           </td>
-                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Youtube" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/1-invitation/img/youtube.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
+                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Youtube" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/2-welcome/img/youtube.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
                                           </td>
-                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Telegram" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/1-invitation/img/telegram.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
+                                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Telegram" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/2-welcome/img/telegram.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
                                           </td>
-                                         <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Vkontakte" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module2-task2/1-invitation/img/vk.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
+                                         <td align="center" valign="top" style="padding:0;Margin:0;padding-right:10px;"><a target="_blank" href="https://#"><img title="Vkontakte" src="https://raw.githubusercontent.com/AnastasiaRaykhel/2174317-play-html-1/module4-task1/2-welcome/img/vk.png" width="32" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" /></a>
                                           </td>
                                   </table>
                                 </td>
